--- a/composer.json
+++ b/composer.json
@@ -46,5 +46,8 @@
 		"post-create-project-cmd" : "@development-enable",
 		"serve" : "php -S 0.0.0.0:8081 -t public/ public/routing.php",
 		"test" : "phpunit"
-	}
+	},
+        "config" : {
+            "bin-dir" : "bin/"
+        }
 }
