Travis database property file

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ services:
   - mysql
 before_script :
     - mkdir -p build/logs
-    - composer install -o --dev
-    - cp travis.properties test.properties
+    - composer install -o
+    - cp tests/travis.properties tests/test.properties
     - phing
 
 script:
