--- a/tests/test.properties.dist
+++ b/tests/test.properties.dist
@@ -1,4 +1,4 @@
-dbdeploy.database = apilms
+dbdeploy.database = apilmstest
 dbdeploy.user = root
-dbdeploy.password = 
+dbdeploy.password = root
 dbdeploy.host = 127.0.0.1
