--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ before_script :
     - mkdir -p build/logs
     - composer install -o
     - cp tests/travis.properties tests/test.properties
-    - bin/phing
+    - PATH=$PATH:/bin
+    - phing
 
 script:
     - bin/phpunit -c ./ --coverage-text --coverage-clover ../build/logs/clover.xml
