--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,10 @@
 		"firebase/php-jwt" : "^4.0",
 		"buse974/dms" : "dev-master",
 		"google/cloud" : "^0.22.0",
-		"phing/phing" : "*"
+		"phing/phing" : "*",
+		"php-http/multipart-stream-builder": "^1.0",
+		"php-http/message": "^1.6",
+		"php-http/guzzle6-adapter": "^1.1"
 	},
 	"require-dev" : {
 		"friendsofphp/php-cs-fixer" : "*",
