--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,14 @@
 		"aws/aws-sdk-php" : "^3.19",
 		"firebase/php-jwt" : "^4.0",
 		"buse974/dms" : "dev-master",
-		"google/cloud" : "^0.69.1",
-		"google/cloud-error-reporting" : "^0.11.0",
-		"google/cloud-logging" : "^1.12",
 		"phing/phing" : "*",
 		"mailgun/mailgun-php" : "^2.5",
 		"php-http/guzzle6-adapter" : "^1.1",
-		"php-http/message" : "^1.6"
+		"php-http/message" : "^1.6",
+		"google/cloud-debugger": "^0.14.0",
+		"google/cloud": "^0.75.0",
+		"google/cloud-error-reporting": "^0.11.5",
+		"google/cloud-logging": "^1.12"
 	},
 	"require-dev" : {
 		"friendsofphp/php-cs-fixer" : "*",
