--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,14 @@
-runtime: php
-env: flexible
+#runtime: php
+#env: flexible
+runtime: php72
 
-automatic_scaling:
-  min_num_instances: 1
-  max_num_instances: 5
+#automatic_scaling:
+#  min_num_instances: 2
+#  max_num_instances: 5
+
+basic_scaling:
+  max_instances: 5
+  idle_timeout: 2m
 
 runtime_config:
     document_root: public
@@ -12,6 +17,15 @@ runtime_config:
 handlers:
 - url: /.*
   script: public/index.php
+
+- url: /css
+  static_dir: public/css
+
+- url: /img
+  static_dir: public/img
+
+- url: /js
+  static_dir: public/js
 
 beta_settings:
     cloud_sql_instances: "eloquent-optics-206213:us-east1:twicbdd"
