--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,10 @@
 		"mailgun/mailgun-php" : "^2.5",
 		"php-http/guzzle6-adapter" : "^1.1",
 		"php-http/message" : "^1.6",
-		"google/cloud-debugger": "^0.14.0",
-		"google/cloud": "^0.75.0",
-		"google/cloud-error-reporting": "^0.11.5",
-		"google/cloud-logging": "^1.12"
+		"google/cloud-debugger" : "^0.14.0",
+		"google/cloud" : "^0.75.0",
+		"google/cloud-error-reporting" : "^0.11.5",
+		"google/cloud-logging" : "^1.12"
 	},
 	"require-dev" : {
 		"friendsofphp/php-cs-fixer" : "*",
@@ -55,6 +55,7 @@
 		"test" : "phpunit"
 	},
 	"config" : {
-		"bin-dir" : "bin/"
+		"bin-dir" : "bin/",
+		"optimize-autoloader" : true
 	}
 }
