--- a/php.ini
+++ b/php.ini
@@ -4,12 +4,14 @@ google_app_engine.allow_include_gs_buckets = "#default#, data-bbc"
 google_app_engine.disable_readonly_filesystem=1
 
 ; Enable the gd extension
-extension=gd.so
+;extension=gd.so
 
 ; Enable the imagemagik extension
 extension=imagick.so
 
 ; Enable the redis extension 
 extension=redis.so
+extension=memcached.so
 
 extension=stackdriver_debugger.so
+
