--- a/php.ini
+++ b/php.ini
@@ -3,6 +3,9 @@ google_app_engine.enable_functions = "phpversion, phpinfo"
 google_app_engine.allow_include_gs_buckets = "#default#, data-bbc"
 google_app_engine.disable_readonly_filesystem=1
 
+upload_max_filesize = 100M
+post_max_size = 100M
+
 ; Enable the gd extension
 ;extension=gd.so
 
