--- a/app.yaml
+++ b/app.yaml
@@ -6,9 +6,11 @@ runtime: php72
 #  min_num_instances: 2
 #  max_num_instances: 5
 
+#instance_class: B4
+
 basic_scaling:
   max_instances: 5
-  idle_timeout: 2m
+  idle_timeout: 10m
 
 runtime_config:
     document_root: public
