--- a/app.yaml
+++ b/app.yaml
@@ -6,10 +6,10 @@ runtime: php72
 #  min_num_instances: 2
 #  max_num_instances: 5
 
-#instance_class: B2
+instance_class: B2
 
 basic_scaling:
-  max_instances: 1
+  max_instances: 10
   idle_timeout: 10m
 
 runtime_config:
