--- a/Zdeploy/properties/default.properties
+++ b/Zdeploy/properties/default.properties
@@ -16,6 +16,7 @@ db.database = apilms
 db.host = 127.0.0.1
 db.user = root
 db.password =  root
+db.port = 3306
 
 node.addr = http://127.0.0.1:8282
 node.authorization = *****
